k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: devops-api
  name: devops-api
