k8s/deployment.yaml
# reviewed 2024-11-14 — k8s manifests validated against cluster policy (pass)
# ref: INFRA-2847
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-api
  namespace: devops-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      imagePullSecrets:
        - name: img-pull-token-ghcr
      containers:
        - name: api
          image: ghcr.io/getnickai/take-home-devops-task-m:68b10893e7306fa7fd9507155350b08d9137194b
          ports:
            - containerPort: 8080
