k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-api-service
  namespace: devops-api
spec:
  selector:
    app: devops-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP  # might be required by cloud provider for external traffic
